<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hintQuery"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onImageSearch"
        android:text="@string/txtSearchButton" />

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnMoreResults"
        android:layout_alignRight="@+id/btnSearch"
        android:layout_below="@+id/layoutAdvancedSearchContainer"
        android:numColumns="3" >

    </GridView>

    
    <LinearLayout
        android:id="@+id/layoutAdvancedSearchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="2dp"
		android:layout_alignRight="@+id/btnSearch"
        android:layout_below="@+id/btnSearch" >
        
        <TextView
        android:id="@+id/txtAdvancedSearchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:onClick="onAdvancedSearchClick"
        android:clickable="true"
        android:text="@string/txtAdvancedSearch" />
        
        <TextView
            android:id="@+id/txtSearchContainerEllipsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onAdvancedSearchClick"
            android:text="@string/ellipsis"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnMoreResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtMoreResultsLabel"
        android:onClick="onClickMoreResults"
        android:visibility="invisible" />

</RelativeLayout>
